SFDC DevOps Test/src/objects/Use_Case__c.object
<CustomObject>
    <fields>
        <fullName>Actor_User_Group__c</fullName>
        <description>Name the actor that will be initiating this use case (primary) and any other actors who will participate in completing the use case (secondary).</description>
        <inlineHelpText>Name the actor that will be initiating this use case (primary) and any other actors who will participate in completing the use case (secondary).</inlineHelpText>
        <label>Actor (User Group)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Flows__c</fullName>
        <description>Document branches from the main flow to handle special conditions</description>
        <inlineHelpText>Document branches from the main flow to handle special conditions</inlineHelpText>
        <label>Alternative Flows</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Use__c</fullName>
        <description>How often will this Use Case be executed?</description>
        <inlineHelpText>How often will this Use Case be executed?</inlineHelpText>
        <label>Frequency of Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normal_Flow__c</fullName>
        <description>Provide a detailed description of the user actions and system responses that will take place during execution of the use case under normal conditions</description>
        <inlineHelpText>Provide a detailed description of the user actions and system responses that will take place during execution of the use case under normal conditions</inlineHelpText>
        <label>Normal Flow</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Provide a brief description of the reason for and outcome of this use case</description>
        <inlineHelpText>Provide a brief description of the reason for and outcome of this use case</inlineHelpText>
        <label>Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Conditions__c</fullName>
        <description>Describe the state of the system at the conclusion of the use case execution</description>
        <inlineHelpText>Describe the state of the system at the conclusion of the use case execution</inlineHelpText>
        <label>Post Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <description>List any activities that must take place, or any conditions that must be true, before the use case can be started. Number each pre-condition</description>
        <inlineHelpText>List any activities that must take place, or any conditions that must be true, before the use case can be started. Number each pre-condition</inlineHelpText>
        <label>Preconditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Case_Name__c</fullName>
        <description>Short Name for the Use Case</description>
        <inlineHelpText>Short Name for the Use Case</inlineHelpText>
        <label>Use Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Use Case</label>
    <nameField>
        <displayFormat>UC-{000000}</displayFormat>
        <label>Use Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>